--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Vowel Analysis</title>
+
+		<meta
+			name="viewport"
+			content="initial-scale=1, width=device-width, shrink-to-fit=yes">
 	</head>
 	
 	
 	<style>
+		* {
+			box-sizing: border-box;
+        	text-size-adjust: none;
+		}
+
 		html, body {
 			margin: 0;
 			padding: 0;
